[Qt] Consolidate layout test crash logging https://bugs.webkit.org/show_bug.cgi?id=75088

Reviewed by Simon Hausmann.

Move backtrace generating logic into WTFReportBacktrace
and add a way to deinstall signal handlers if we know
that we have already printed the backtrace.

.:

* Source/qtwebkit-export.map:

Source/JavaScriptCore:

* JavaScriptCore.exp:
* JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
* wtf/Assertions.cpp:
(WTFLogLocker::WTFReportBacktrace):
(WTFLogLocker::WTFSetCrashHook):
(WTFLogLocker::WTFInvokeCrashHook):
* wtf/Assertions.h:

Tools:

* DumpRenderTree/qt/main.cpp:
(crashHandler):
(setupSignalHandlers):
(WTFCrashHook):
(main):
* WebKitTestRunner/InjectedBundle/qt/InjectedBundleQt.cpp:
(WTR::crashHandler):
(WTR::setupSignalHandlers):
(WTR::crashHook):
(WTR::InjectedBundle::platformInitialize):

Canonical link: https://commits.webkit.org/93348@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105267 268f45cc-cd09-0410-ab3c-d52691b4dbfc